syntax = "proto3";

package api;

option go_package = "github.com/thomas-illiet/terrapi-controller/api";

service ActivityService {
  rpc InsertActivity(InsertActivityRequest) returns (InsertActivityResponse) {}
  rpc RetrieveActivity(RetrieveActivityRequest) returns (Activity) {}
  rpc ListActivity(ListActivityRequest) returns (Activities) {}
}

message RetrieveActivityRequest {
  int32 id = 1;
}

message InsertActivityResponse {
  int32 id = 1;
}

message ListActivityRequest {
  int32 offset = 1;
}

message InsertActivityRequest {
  int32 deployment = 2;
  bool is_error = 3;
  string message = 4;
}

message Activity {
  int32 id = 1;
  int32 deployment = 2;
  bool is_error = 3;
  string message = 4;
  int32 timestamp = 5;
}

message Activities {
  repeated Activity activities = 1;
}
